# silverback

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ape-config.yaml  build_docs.py  example.py  index.html  pyproject.toml  requirements-bot.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  commitlint.yaml  docs.yaml  publish.yaml  test.yaml
bots/: example.py  latency-test.py
docs/: conf.py  index.md  index.rst
docs/commands/: cluster.rst  run.rst
docs/methoddocs/: application.md  middlewares.md
docs/userguides/: deploying.md  development.md  managing.md  platform.md
examples/memory/: main.py
examples/redis/: main.py
latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/.doctrees/: environment.pickle  index.doctree
latest/_sources/: index.md.txt  index.rst.txt
latest/commands/: cluster.html  run.html
latest/methoddocs/: application.html  cluster.html  exceptions.html  main.html  middlewares.html  recorder.html  runner.html  settings.html  state.html  subscriptions.html  types.html  utils.html
latest/userguides/: deploying.html  development.html  managing.html  platform.html  quickstart.html  testing.html
silverback/: __init__.py  _build_utils.py  _cli.py  _click_ext.py  _importer.py  application.py  exceptions.py  main.py  middlewares.py  persistence.py  pytest.py  recorder.py  runner.py  settings.py  state.py  subscriptions.py  types.py  utils.py  worker.py
silverback/cluster/: __init__.py  auth.py  client.py  mcp.py  settings.py  types.py  utils.py
silverback/platform/: client.py  types.py
stable/: py-modindex.html  search.html  searchindex.js
stable/.doctrees/: environment.pickle
stable/commands/: run.html
stable/methoddocs/: exceptions.html  main.html  runner.html  state.html  subscriptions.html
stable/userguides/: deploying.html  managing.html  quickstart.html
tests/: backtest_merge.yaml  conftest.py  test_bot_init.py  test_cli.py  test_cluster.py  test_types.py  test_utils.py
v0.1.0/: .buildinfo  genindex.html
v0.1.0/methoddocs/: application.html  middlewares.html
v0.1.0/userguides/: development.html
v0.1.1/: .buildinfo
v0.1.1/.doctrees/: environment.pickle
v0.1.1/commands/: run.html
v0.1.1/methoddocs/: exceptions.html  middlewares.html  runner.html  utils.html
v0.2.0/: .buildinfo  index.html  py-modindex.html  search.html
v0.2.0/.doctrees/: environment.pickle
v0.2.0/commands/: run.html
v0.2.0/methoddocs/: runner.html  subscriptions.html
v0.2.0/userguides/: quickstart.html
v0.2.1/: .buildinfo  genindex.html  py-modindex.html  search.html
v0.2.1/.doctrees/: environment.pickle
v0.2.1/commands/: run.html
v0.2.1/methoddocs/: exceptions.html  subscriptions.html  utils.html
v0.2.1/userguides/: quickstart.html
v0.3.0/: .buildinfo  objects.inv  py-modindex.html  search.html  searchindex.js
v0.3.0/.doctrees/: environment.pickle
v0.3.0/methoddocs/: application.html  exceptions.html  middlewares.html  runner.html  subscriptions.html
v0.3.0/userguides/: development.html
v0.3.1/: .buildinfo  index.html  py-modindex.html
v0.3.1/.doctrees/: environment.pickle
v0.3.1/methoddocs/: application.html  exceptions.html  middlewares.html  runner.html  subscriptions.html  utils.html
v0.3.1/userguides/: development.html  quickstart.html
v0.3.2/: .buildinfo  py-modindex.html  search.html
v0.3.2/.doctrees/: environment.pickle
v0.3.2/methoddocs/: application.html  middlewares.html  subscriptions.html
v0.3.3/: .buildinfo  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.3.3/.doctrees/: environment.pickle
v0.3.3/commands/: run.html
v0.3.3/methoddocs/: application.html  exceptions.html  runner.html  subscriptions.html  utils.html
v0.4.0/: .buildinfo  genindex.html  py-modindex.html
v0.4.1/: .buildinfo  genindex.html  index.html  py-modindex.html  searchindex.js
v0.4.2/: .buildinfo  objects.inv  py-modindex.html  search.html
v0.5.0/: .buildinfo  genindex.html  index.html
v0.5.1/: .buildinfo  py-modindex.html
v0.5.12/: .buildinfo  objects.inv  searchindex.js
v0.5.2/: .buildinfo  genindex.html  py-modindex.html  search.html
v0.5.3/: .buildinfo  genindex.html
v0.5.4/: .buildinfo  genindex.html  objects.inv  py-modindex.html
v0.5.5/: .buildinfo  search.html
v0.5.6/: .buildinfo  index.html
v0.5.7/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
v0.5.8/: .buildinfo  genindex.html  searchindex.js
v0.5.9/: objects.inv  searchindex.js
v0.6.0/: genindex.html
v0.6.1/: search.html
v0.6.2/: index.html  objects.inv
v0.6.3/: genindex.html  searchindex.js
v0.6.4/: objects.inv  searchindex.js
v0.7.0/: index.html  search.html  searchindex.js
v0.7.1/: objects.inv  searchindex.js
v0.7.10/: searchindex.js
v0.7.14/: .buildinfo  searchindex.js
v0.7.15/: objects.inv
v0.7.16/: objects.inv
v0.7.17/: genindex.html  searchindex.js
v0.7.2/: py-modindex.html  searchindex.js
v0.7.20/: genindex.html  index.html  py-modindex.html
v0.7.23/: searchindex.js
v0.7.24/: genindex.html  searchindex.js
v0.7.25/: index.html  searchindex.js
v0.7.26/: genindex.html
v0.7.27/: .buildinfo  genindex.html  objects.inv  py-modindex.html  search.html
v0.7.28/: .buildinfo  genindex.html  searchindex.js
v0.7.29/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.7.3/: index.html
v0.7.30/: genindex.html  searchindex.js
v0.7.31/: genindex.html  index.html  objects.inv  searchindex.js
v0.7.32/: .buildinfo  genindex.html  py-modindex.html  search.html  searchindex.js
v0.7.33/: py-modindex.html  search.html
v0.7.35/: genindex.html  index.html  objects.inv  searchindex.js
v0.7.36/: index.html  objects.inv  search.html  searchindex.js
v0.7.37/: .buildinfo
v0.7.38/: py-modindex.html
v0.7.4/: search.html
v0.7.5/: genindex.html  py-modindex.html
v0.7.8/: index.html  searchindex.js
v0.7.9/: index.html  objects.inv  search.html  searchindex.js
(+670 files in other folders)
